--- a/OBSliderDemo/OBSliderDemo-Info.plist
+++ b/OBSliderDemo/OBSliderDemo-Info.plist
@@ -24,5 +24,9 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
 </dict>
 </plist>
